2007-05-09  Jim Evins  <evins@snaught.com>

	* src/object-editor-bc-page.c:
	* src/object-editor-data-page.c:
	* src/object-editor-fill-page.c:
	* src/object-editor-image-page.c:
	* src/object-editor-line-page.c:
	* src/object-editor-lsize-page.c:
	* src/object-editor-position-page.c:
	* src/object-editor-private.h:
	* src/object-editor-shadow-page.c:
	* src/object-editor-size-page.c:
	* src/object-editor-text-page.c:
	* src/object-editor.c:
	* src/prefs-dialog.c:
	* src/template-designer.c:
	* src/ui-property-bar.c:
	* src/wdgt-media-select.c:
		Replaced signal block/unblock pairs with simple flags.  This reduces
		some code clutter, hopefully making it easier to read.

2007-05-05  Jim Evins  <evins@snaught.com>

	* src/template-designer.c: (apply_cb):
		Add new template to mini-preview pixbuf cache.

2007-05-03  Jim Evins  <evins@snaught.com>

	* src/label-image.c: (gl_label_image_init), (draw_object):
		Scale default pixbuf up, to prevent bluring.  Use cairo_fill to
		render image.

2007-05-02  Jim Evins  <evins@snaught.com>

	* src/view.c: (draw_select_region_layer), (motion_notify_event_cb),
	(button_release_event_cb):
		Removed attempt at rendering optimization by clipping the updates
		to areas affected -- this actually seemed to hurt update performance.

2007-04-30  Jim Evins  <evins@snaught.com>

	* src/color.h:
	* src/color.c: (gl_color_shadow), (gl_color_node_new_default),
	(gl_color_node_equal), (gl_color_node_expand):
	* src/label-barcode.c: (draw_object):
	* src/label-box.c: (draw_object), (draw_shadow):
	* src/label-ellipse.c: (draw_object), (draw_shadow):
	* src/label-line.c: (draw_object), (draw_shadow):
	* src/label-text.c: (draw_object), (draw_shadow):
	* src/wdgt-mini-preview.c: (draw_shadow), (draw_labels):
	* src/wdgt-rotate-label.c: (drawingarea_update):
		Some cleanup to color related code.

2007-04-30  Jim Evins  <evins@snaught.com>

	* src/label.h:
		Added glLabelRegion structure type.
	* src/label-object.c: (gl_label_object_get_extent):