@@ -1,3 +1,8 @@
+2007-05-13  Jim Evins  <evins@snaught.com>
+
+	* src/merge-text.c: (parse_line), (parse_field):
+		Remove leading and trailing spaces from CSV fields, unless quoted.
+
 2007-05-09  Jim Evins  <evins@snaught.com>
 
 	* src/object-editor-bc-page.c:
